use node builder

--- a/now.json
+++ b/now.json
@@ -2,5 +2,5 @@
     "version": 2,
     "public": true,
     "builds": [
-        { "src": "index.js", "use": "@now/node-server" }]
+        { "src": "index.js", "use": "@now/node" }]
 }
