use node-builder

--- a/now.json
+++ b/now.json
@@ -3,5 +3,5 @@
     "name": "actions-workflow-template",
     "public": true,
     "builds": [
-        { "src": "index.js", "use": "@now/node" }]
+        { "src": "index.js", "use": "@now/node-server" }]
 }
